@@ -1,3 +1,14 @@
+2007-02-28  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-error-with-buffer): Use `sit-for'.
+
+	* tramp-gw.el (tramp-gw-vector, tramp-gw-gw-proc): Renamed from
+	`tramp-gw-current-vector' and `tramp-gw-current-gw-proc'.
+	(tramp-gw-gw-vector): New defvar.
+	(tramp-gw-gw-proc-sentinel): New defun.
+	(tramp-gw-open-connection): Use an independent buffer name for
+	auxiliary process.  Set process sentinel for `tramp-gw-gw-proc'.
+
 2007-02-27  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-error-with-buffer): New defsubst.  Apply it
